# remote-client-server

./: .gitignore  Dockerfile  Dockerfile.base  README.md  build.ps1  build.sh  dev_requirements.txt  environment.yml  local_build.sh  pyproject.toml  requirements.txt
.github/workflows/: base-image.yml  dev_workflow.yml  workflow.yml
http_server/: main.py
http_server/router/: health_check.py  queue_size.py
server/: main.py  server.py
server/gaas/: image_gen.py  instruction_gen.py
server/gaas/embed_gen/: embed_gen.py  vision_embed_gen.py
server/gaas/emotion_gen/: emotion_gen.py
server/gaas/gliner_gen/: gliner_gen.py
server/gaas/image_gen/: image_gen.py
server/gaas/ner_gen/: ner_gen.py
server/globals/: app_instance.py  globals.py
server/model_utils/: download.py  model_config.py  supported_models.py
server/pydantic_models/: models.py  request_models.py  response_models.py
server/queue_manager/: queue_manager.py
server/redis_manager/: redis_manager.py
server/router/: chat_completion_route.py  embeddings_route.py  emotion_route.py  generation_route.py  gpu_route.py  gpu_status.py  health_check_route.py  metrics_route.py  model_load_check_route.py  models_route.py  queue_route.py  queue_size_route.py  reclaim_route.py  sentiment_gen_route.py  status_route.py
server/sockets/: connection_manager.py  queue_manager.py
server/test/: client1.py
tcp_server/: server.py
tcp_server/handlers/: image_server_handler.py  server_utils.py
tcp_server/test/: client2.py  client3.py  client4.py
utils/: clear_mem.py  dl_model_files.py  torch_test.ipynb
(+17 files in other folders)
