[project]
name = "remote-client-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.1.0",
    "diffusers>=0.31.0",
    "fastapi>=0.115.4",
    "ftfy>=6.3.1",
    "gliner>=0.2.13",
    "huggingface-hub[cli]>=0.26.2",
    "idna>=3.10",
    "numpy>=2.1.3",
    "paddleocr>=2.7.3",
    "paddlepaddle-gpu>=2.6.2",
    "pillow>=11.0.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.9.2",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "timm>=1.0.11",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.2",
    "uvicorn>=0.32.0",
    "guidance>=0.1.16",
    "jsonschema>=4.23.0",
]

